syntax="proto3";

package distlike;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service DistLikeService {
    rpc createNewLike (CreationData) returns (OutputData);
    rpc DeleteLike (GetIdForLike) returns (google.protobuf.Empty);
}


message CreationData {
    int32 userId = 2;
    int32 postId = 3;
}

message OutputData {
    int32 id = 1;
    int32 userId = 2;
    int32  postId = 3;
    google.protobuf.Timestamp createdAt = 4;
}

message GetIdForLike {
    int32 id = 1;
}